<resources>

    <string name="see_connections">See connections</string>
    <string name="stop">Stop</string>
    <string name="permission_location_rationale">Please allow Location Permissions - Google requires this for your phone to scan for another phone’s Bluetooth. We do not use or store your location.</string>
    <string name="permission_write_rationale">OpenTrace needs save files for logs (Debug builds only)</string>
    <string name="ble_not_supported">This device does not support BLE</string>

    <string name="tv_onboarding_title">Help stop the spread of COVID-19 by turning Bluetooth on</string>
    <string name="tv_onboarding_desc">If you had close contact with a COVID-19 case, we help the health authorities call you more quickly, to provide guidance and care.</string>
    <string name="tv_onboarding_desc_sub">To protect those around you, OTC may also ask you to share your data.</string>
    <string name="i_want_to_help">I want to help</string>

    <string name="tv_howitworks_title">How OpenTrace works</string>
    <string name="tv_howitworks_explanation_1">We use Bluetooth signals to determine if you are near another OpenTrace user.</string>
    <string name="tv_howitworks_explanation_2">This proximity data is encrypted and stored only on your phone.</string>
    <string name="tv_howitworks_explanation_3">OTC will seek your consent to upload the data, if it\'s needed for contact tracing.</string>
    <string name="mobile_number">Mobile number</string>
    <string name="register_number">Register your mobile number</string>
    <string name="register_number_details">We\'ll contact you if you had close contact with a COVID-19 case.</string>
    <string name="register_number_family">Setting up for your family? \nUse their number instead of yours.</string>
    <string name="invalid_length">Needs to be 8-digits</string>
    <string name="invalid_number">Invalid Mobile Number</string>

    <string name="enter_otp">Enter your OTP</string>
    <string name="otp_sent">A 6-digit code has been sent to %s.</string>
    <string name="resend_code"><u>Resend Code</u></string>

    <string name="setup_app_permission">\Set up app permissions</string>
    <string name="setup_app_permission_title">Select \'<b>Yes</b>\' or \'<b>Allow</b>\' for the next few screens to set up.</string>
    <string name="bluetooth">1. Bluetooth</string>
    <string name="location_permissions">2. Location Permissions</string>
    <string name="battery_optimiser_opt">3. Battery Optimiser</string>
    <string name="notes">Android needs Location Permissions for Bluetooth to work. We don\'t have access to your physical location.</string>
    <string name="proceed">Proceed</string>
    <string name="continue_">Continue</string>
    <string name="get_otp">Get OTP</string>
    <string name="wrong_number"><u>Wrong Number?</u></string>
    <string name="app_permission_fully_setup">App permissions are fully set up</string>
    <string name="app_permission_fully_setup_desc">Please leave all settings on until the outbreak ends.</string>

    <string name="send_otp">We\'ll text you a One-Time Pin (OTP)</string>

    <string name="title_home">Home</string>
    <string name="title_upload">Upload</string>
    <string name="title_help">Help</string>

    <string name="how_to_help">How you can help stop the spread of COVID-19</string>
    <string name="help_action">Keep app open, and let it run in the background until the end of the outbreak</string>

    <string name="app_permission_status">App Permissions Status</string>
    <string name="bluetooth_on">Bluetooth: On</string>
    <string name="location_on">Location Permission: On</string>
    <string name="battery_optimiser">Battery Optimisation: Off</string>
    <string name="push_noti">Push Notification: On</string>
    <string name="share_this_app">Share this app</string>
    <string name="ask_friend">Ask friends and family to help</string>
    <string name="help_us_identify">Help stop the virus spread by allowing all permissions</string>
    <string name="restart_app_setup">Complete app setup</string>
    <string name="upload_data">Upload Data</string>
    <string name="for_official_use">For use by contact tracers</string>
    <string name="data_uploaded">Data has been uploaded to contact tracers</string>
    <string name="upload_agreement">By uploading, you agree to share with OTC your OpenTrace proximity data for the past 21 days. <b>We do not collect any geolocation or personal data.</b></string>
    <string name="enter_code">Enter Code</string>
    <string name="submit">Submit</string>
    <string name="open_location_setting">Application needs location permission in order to work. Do you want to enable location permission?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="setup_incomplete">Setup is incomplete!</string>
    <string name="ack_title">Your consent is needed for the following:</string>
    <string name="ack_mobile">To store your mobile number in a secured OpenTrace registry</string>
    <string name="ack_data">To allow OpenTrace users to send OTC information of encounters with you, if they are confirmed or suspected to have COVID-19</string>
    <string name="otp">Please enter the OTP sent to your mobile phone via sms</string>
    <string name="keep_push_on">Keep push notifications on too, so we can alert you if the app is not scanning.</string>
    <string name="verification_failed">Verification failed. Please try again</string>
    <string name="invalid_otp">Wrong OTP entered</string>
    <string name="unknown_error">An error has occurred. Please try again</string>
    <string name="must_be_six_digit">Must be a 6-digit number</string>
    <string name="invalid_user">Your account has been disabled. Please contact support.</string>
    <string name="too_many_requests">Too many requests. Please try again later.</string>

    <string name="privacy_safeguards"><u>privacy safeguards</u></string>

    <string name="service_ok_title">OpenTrace is scanning to keep you safe! :)</string>
    <string name="service_ok_body">Restart phone if this notification disappears</string>

    <string name="service_not_ok_title">Oh no! :(</string>
    <string name="service_not_ok_body">OpenTrace is not scanning.</string>
    <string name="service_not_ok_action">Check app now</string>







    <string name="share_message">Join me in stopping the spread of COVID-19! Download OpenTrace. Go to: https://bluetrace.io</string>
    <string name="for_use_by_otc">For use by OTC</string>
    <string name="upload_data_for_contact_tracing">Upload data for contact tracing</string>
    <string name="test">test</string>
    <string name="payload">Payload:</string>
    <string name="use_only_if_otc">Use only if OTC contacts you</string>
    <string name="peripheral_central">Peripheral Central</string>
    <string name="great">Great!!!</string>
    <string name="last_update">Last update: %$s</string>
    <string name="central">Central</string>
    <string name="no_news">No news</string>
    <string name="done">Done</string>
    <string name="step_2">STEP 2</string>
    <string name="step_1">STEP 1</string>
    <string name="enter_pin_to_upload">Enter PIN to upload</string>
    <string name="invalid_pin">Invalid PIN</string>
    <string name="read_our">Read our</string>
    <string name="your_data_has_been_uploaded">Your data has been uploaded to OTC</string>
    <string name="help">Help</string>






    <string name="your_code_will_expire_in">Your code will expire in :\u0020</string>
    <string name="phone_number_invalid">Phone number invalid</string>
    <string name="tap_next">Tap \'Next\' only if a contact tracer tells you to do so</string>
    <string name="next">Next</string>
    <string name="verify_that_the_contact">Verify that the contact tracer is from OTC</string>
    <string name="make_sure_they_give_you_a_code">Make sure they give you a code that matches the one below.</string>

    <string name="verify_code">Verification code: \u0020</string>
    <string name="i_agree">I agree</string>
    <string name="verify">verify</string>








    <string name="app_name">Covtakt</string>








    <string name="noti_title">You have had close contact with a person who has COVID-19!</string>
    <string name="noti_content">
In order to protect yourself and your loved ones, we advise you to isolate yourself as soon as possible and contact a health institution from which you will receive further instructions. </string>
    <string name="title_alert">Notifications</string>
    <string name="no_notification">You currently have no notifications</string>
    <string name="location_permission_title">Receives notifications</string>
    <string name="app_permission_location_setup_desc">Your app needs this permission because a Bluetooth scan can be used to gather information about the location of the user</string>
    <string name="battery_optimiser_title">Battery saving</string>
    <string name="app_permission_battery_setup_desc">By allowing the application to run in the background, you can reduce battery consumption</string>
    <string name="bluetooth_title">Activate Bluetooth</string>
    <string name="app_permission_bluetooth_setup_desc"> Please activate the Bluetooth option in the phone settings. Then return to the application and confirm.</string>
    <string name="bluetooth_active">Bluetooth is activated</string>
    <string name="status_on">On</string>
    <string name="status_off">Off</string>











</resources>
