<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.OnboardingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/footer">

        <ImageView
            style="@style/OnboardingImage"
            android:id="@+id/on_boarding_banner"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_logo_mark"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ScrollView
            android:layout_width="match_parent"
            android:id="@+id/scrContent"
            app:layout_constraintTop_toBottomOf="@id/on_boarding_banner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scrollbars="vertical"
            android:fadeScrollbars="false"
            android:layout_marginBottom="8dp"
            android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/OnboardingTitle"
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/setup_app_permission"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/on_boarding_banner" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_desc"
            style="@style/OnboardingDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="left"
            android:text="@string/setup_app_permission_title"
            android:visibility="gone"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/OnboardingSubDesc"
            android:id="@+id/tv_desc_sub_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"


            android:gravity="left"
            android:text="@string/bluetooth"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/OnboardingSubDesc"
            android:id="@+id/tv_desc_sub_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"

            android:gravity="left"
            android:text="@string/location_permissions"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc_sub_1" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_desc_sub_3"
                style="@style/OnboardingSubDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"

                android:gravity="left"
                android:text="@string/battery_optimiser_opt"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc_sub_2" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/OnboardingSubDesc"
            android:id="@+id/tv_note_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="left"
            android:text="@string/notes"
            android:textColor="@color/grey_3"
            android:paddingTop="16dp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc_sub_2" />


        </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <include layout="@layout/button_and_progress" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
