<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.OnboardingActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/on_boarding_banner"
        style="@style/OnboardingImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        android:paddingBottom="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_help_outline_blue_64dp" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        style="@style/OnboardingTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/tv_howitworks_title"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/on_boarding_banner" />

    <ScrollView
        android:id="@+id/scrContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/privacy"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_desc"
                style="@style/OnboardingDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"

                android:gravity="left"
                android:text="@string/tv_howitworks_explanation_1"
                android:visibility="visible" />
        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/privacy"
        style="@style/OnboardingDescNoPadding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:linksClickable="true"
        android:paddingLeft="24dp"
        android:text="@string/privacy_safeguards"
        android:textColor="@color/secondary_blue_3"
        android:textColorLink="@color/primary_blue_3"
        app:layout_constraintBottom_toTopOf="@id/btn_onboardingStart" />


    <Button
        android:id="@+id/btn_onboardingStart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/gradient"
        android:fontFamily="@font/font"
        android:text="@string/great"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textFontWeight="600"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <FrameLayout
        android:id="@+id/frameProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:animateLayoutChanges="true"
        android:background="#000000"
        android:visibility="invisible">

        <ProgressBar
            android:id="@+id/loadingProgressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
