<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.OnboardingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/scrContent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        android:layout_marginBottom="16dp"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:layout_height="0dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/header"
            style="@style/OnboardingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:paddingLeft="26dp"
            android:paddingTop="48dp"
            android:paddingRight="26dp"
            android:paddingBottom="24dp"
            android:text="@string/ack_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/phone_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingTop="8dp"
            android:paddingRight="24dp"
            android:visibility="gone"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/emote_icon"
            app:layout_constraintTop_toTopOf="@id/phone_number"
            app:srcCompat="@drawable/ic_smartphone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/phone_number"
            style="@style/OnboardingDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="24dp"
            android:paddingLeft="24dp"
            android:visibility="gone"
            android:drawableLeft="@drawable/ic_smartphone"
            android:text="@string/ack_mobile"
            app:layout_constraintLeft_toRightOf="@id/phone_icon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/emote_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingTop="8dp"
            android:paddingRight="24dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/data_clause"
            app:srcCompat="@drawable/ic_masked_emote" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/data_clause"
            style="@style/OnboardingDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="21dp"

            android:drawableLeft="@drawable/ic_masked_emote"

            android:paddingLeft="21dp"
            android:text="@string/ack_data"
           />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/readour"
            style="@style/OnboardingDescNoPadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_our"
            android:paddingLeft="24dp"
            android:visibility="gone"
            android:layout_marginBottom="20dp"
            />



    </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <include layout="@layout/button_and_progress" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
